# AetherShell

./: README.md  a.out  lib.md  package_all.sh  test_gtk.c  test_markup.c  test_pango.c  uninstall.sh
AetherDock/: AetherDock  Makefile  README.md
aether-recorder/: meson.build
aetheridle/: main.c  meson.build
aetherlock/: README.md  a.out  lockscreen.html  logo.pbm  main.c  meson.build  patch3.diff  patch4.diff  patch_aetherlock_main.diff  patch_main_include.diff  png2pbm  png2pbm.c  svg2cairo.py  test_regex.c
aetherlock/include/: aetherlock.h  sysinfo.h  vaxp_config.h  vaxp_logo.h  venom_notifications.h  weather.h
aetherlock/pam/: aetherlock
aetherlock/src/: main.c  power_actions.c  render.c  scratch_render.c  seat.c  sysinfo.c  vaxp_config.c  venom_notifications.c  weather.c
auth/: Makefile  README.md  auth  auth.service
auth/include/: auth_ui.h  config.h
auth/src/: auth.c  auth_ui.c  config.c
basilisk/: Makefile  basilisk  scratch  scratch.c  scratch.patch  scratch2.patch  scratch3  scratch3.c
basilisk/src/: main.c  window.c
desktop/: Makefile  desktop  meson.build  test_leak.sh  vaxp-setbg
osd-notify/: Makefile  a.out  osd-notify  patch.diff  patch2.diff  test_aether  test_markup.c
panel/: Makefile  panel  patch5.diff  patch_panel_include.diff
vaxp-background/: meson.build  vaxp-background  vaxp-setbg
vaxp-background/include/: layer_manager.h  video_wallpaper.h
vaxp-background/src/: layer_manager.c  main.c  vaxp-setbg.c  video_wallpaper.c  wallpaper.c
vpanel/: Makefile  README.md  panel.conf  style.css  vpanel  vpanel-settings
(+122 files in other folders)
